src/test/ui/error-codes/E0452.stderr
error[E0452]: malformed lint attribute
  --> $DIR/E0452.rs:1:10
   |
LL | #![allow(foo = "")]
   |          ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0452`.
